--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <label>
             <div class="inputbox">
               <div><span>비밀번호</span></div>
-              <input type="text" name="userpw">
+              <input type="password" name="userpw">
               <div>
                 <p></p>
               </div>
@@ -80,7 +80,7 @@
 
     <section class="join-box">
       <p>계정이 없으신가요?</p>
-      <a href="">가입하기</a>
+      <a href="https://www.instagram.com/accounts/emailsignup/">가입하기</a>
     </section>
 
     <div class="appdown-box">
@@ -88,10 +88,10 @@
         <P>앱을 다운로드 하세요.</P>
       </div>
       <div class="appdown-img">
-        <a href="">
+        <a href="https://apps.apple.com/kr/app/instagram/id389801252">
           <img src="./images/app-store.png" alt="앱스토어 이미지">
         </a>
-        <a href="">
+        <a href="https://play.google.com/store/apps/details?id=com.instagram.android&pli=1">
           <img src="./images/gg-play.png" alt="구글플레이 이미지">
         </a>
       </div>
