--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
       </header>
 
-      <form id="join-form" action="./join.html">
+      <form id="join-form" action="">
 
         <div class="join-box-item" id="userid">
           <label>
